# crypto-mm

./: CMakeLists.txt  README.md  conandata.yml  conanfile.py  main.cpp
src/client/: ws_execution_client.h  ws_order_book_client.h  ws_order_client.h  ws_order_entry_client.h  ws_trades_client.h
src/spsc_queue/: spsc_padded_queue.h  spsc_queue_v1.h  spsc_queue_v2.h  spsc_queue_v3.h  spsc_queue_v4.h
src/strategy/: feature_engine.h  market_maker.h  order_manager.h
src/test/unit/: feature_engine_ut.cpp  trading_engine_ut.cpp
src/trading/: feature_engine.h  market_maker.h  order_manager.h  trading_engine.h
src/util/: padded_atomic.h  padded_value.h  spsc_queue.h
src/utils/: spsc_queue_v1.h
